Remove unused /transaction API