@@ -1,52 +1,60 @@
 package it.gov.pagopa.bizeventsservice.service;
 
 import com.azure.spring.data.cosmos.core.query.CosmosPageRequest;
-import feign.FeignException;
 import it.gov.pagopa.bizeventsservice.client.IReceiptGeneratePDFClient;
 import it.gov.pagopa.bizeventsservice.client.IReceiptGetPDFClient;
-import it.gov.pagopa.bizeventsservice.util.CacheService;
 import it.gov.pagopa.bizeventsservice.entity.BizEvent;
 import it.gov.pagopa.bizeventsservice.entity.view.BizEventsViewCart;
 import it.gov.pagopa.bizeventsservice.entity.view.BizEventsViewGeneral;
 import it.gov.pagopa.bizeventsservice.entity.view.BizEventsViewUser;
-import it.gov.pagopa.bizeventsservice.entity.view.enumeration.OriginType;
 import it.gov.pagopa.bizeventsservice.exception.AppException;
 import it.gov.pagopa.bizeventsservice.model.filterandorder.Order.TransactionListOrder;
 import it.gov.pagopa.bizeventsservice.model.response.Attachment;
 import it.gov.pagopa.bizeventsservice.model.response.AttachmentsDetailsResponse;
 import it.gov.pagopa.bizeventsservice.model.response.paidnotice.InfoNotice;
 import it.gov.pagopa.bizeventsservice.model.response.paidnotice.NoticeDetailResponse;
-import it.gov.pagopa.bizeventsservice.model.response.transaction.*;
+import it.gov.pagopa.bizeventsservice.model.response.transaction.TransactionListItem;
+import it.gov.pagopa.bizeventsservice.model.response.transaction.TransactionListResponse;
 import it.gov.pagopa.bizeventsservice.repository.primary.BizEventsViewCartRepository;
 import it.gov.pagopa.bizeventsservice.repository.primary.BizEventsViewGeneralRepository;
 import it.gov.pagopa.bizeventsservice.repository.primary.BizEventsViewUserRepository;
 import it.gov.pagopa.bizeventsservice.service.impl.TransactionService;
+import it.gov.pagopa.bizeventsservice.util.CacheService;
 import it.gov.pagopa.bizeventsservice.util.ViewGenerator;
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.MethodOrderer;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.TestMethodOrder;
 import org.mockito.ArgumentCaptor;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort.Direction;
-import org.springframework.http.HttpStatus;
 import org.springframework.test.context.ContextConfiguration;
 
-import java.time.OffsetDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.concurrent.TimeUnit;
 
 import static it.gov.pagopa.bizeventsservice.util.ViewGenerator.generateBizEventsViewUser;
-import static org.awaitility.Awaitility.await;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anySet;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.mockito.Mockito.when;
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
@@ -80,7 +88,7 @@ public class TransactionServiceTest {
 
     private TransactionService transactionService;
 
-    private byte[] receipt = {69, 121, 101, 45, 62, 118, 101, 114, (byte) 196, (byte) 195, 61, 101, 98};
+    private final byte[] receipt = {69, 121, 101, 45, 62, 118, 101, 114, (byte) 196, (byte) 195, 61, 101, 98};
 
     @BeforeEach
     void setUp() {
@@ -88,7 +96,7 @@ public class TransactionServiceTest {
                 receiptClient, generateReceiptClient, bizEventsService, cacheService));
         Attachment attachmentDetail = mock(Attachment.class);
         when(attachmentDetail.getName()).thenReturn("name.pdf");
-        AttachmentsDetailsResponse attachments = AttachmentsDetailsResponse.builder().attachments(Arrays.asList(attachmentDetail)).build();
+        AttachmentsDetailsResponse attachments = AttachmentsDetailsResponse.builder().attachments(List.of(attachmentDetail)).build();
         when(receiptClient.getAttachments(anyString(), anyString())).thenReturn(attachments);
         when(receiptClient.getReceipt(anyString(), anyString(), any())).thenReturn(receipt);
         when(generateReceiptClient.generateReceipt(anyString())).thenReturn("OK");
@@ -408,113 +416,6 @@ public class TransactionServiceTest {
     }
 
     @Test
-    void idAndTaxCodeWithOneEventShouldReturnTransactionDetails() {
-        List<BizEventsViewGeneral> generalViewList = Collections.singletonList(ViewGenerator.generateBizEventsViewGeneral(false));
-        when(bizEventsViewGeneralRepository.findByTransactionId(ViewGenerator.TRANSACTION_ID))
-                .thenReturn(generalViewList);
-        List<BizEventsViewCart> listOfCartView = Collections.singletonList(ViewGenerator.generateBizEventsViewCart());
-        when(bizEventsViewCartRepository.getBizEventsViewCartByTransactionId(ViewGenerator.TRANSACTION_ID))
-                .thenReturn(listOfCartView);
-        TransactionDetailResponse transactionDetailResponse =
-                Assertions.assertDoesNotThrow(() ->
-                        transactionService.getTransactionDetails(
-                                ViewGenerator.USER_TAX_CODE_WITH_TX, ViewGenerator.TRANSACTION_ID));
-        assertNotNull(transactionDetailResponse);
-        verify(bizEventsViewGeneralRepository).findByTransactionId(ViewGenerator.TRANSACTION_ID);
-        verify(bizEventsViewCartRepository).getBizEventsViewCartByTransactionId(ViewGenerator.TRANSACTION_ID);
-        verifyNoMoreInteractions(bizEventsViewGeneralRepository);
-        verifyNoMoreInteractions(bizEventsViewCartRepository);
-
-        BizEventsViewGeneral viewGeneral = generalViewList.get(0);
-        assertNotNull(transactionDetailResponse);
-        InfoTransactionView infoTransaction = transactionDetailResponse.getInfoTransaction();
-        assertEquals(viewGeneral.getTransactionId(), infoTransaction.getTransactionId());
-        assertEquals(viewGeneral.getAuthCode(), infoTransaction.getAuthCode());
-        assertEquals(viewGeneral.getRrn(), infoTransaction.getRrn());
-        assertEquals(viewGeneral.getTransactionDate(), infoTransaction.getTransactionDate());
-        assertEquals(viewGeneral.getPspName(), infoTransaction.getPspName());
-        assertEquals(viewGeneral.getWalletInfo().getAccountHolder(), infoTransaction.getWalletInfo().getAccountHolder());
-        assertEquals(viewGeneral.getWalletInfo().getBrand(), infoTransaction.getWalletInfo().getBrand());
-        assertEquals(viewGeneral.getWalletInfo().getBlurredNumber(), infoTransaction.getWalletInfo().getBlurredNumber());
-        assertEquals(viewGeneral.getWalletInfo().getMaskedEmail(), infoTransaction.getWalletInfo().getMaskedEmail());
-        assertEquals(viewGeneral.getPayer().getName(), infoTransaction.getPayer().getName());
-        assertEquals(viewGeneral.getPayer().getTaxCode(), infoTransaction.getPayer().getTaxCode());
-        assertEquals(ViewGenerator.FORMATTED_AMOUNT, infoTransaction.getAmount());
-        assertEquals(viewGeneral.getFee(), infoTransaction.getFee());
-        assertEquals(viewGeneral.getPaymentMethod(), infoTransaction.getPaymentMethod());
-        assertEquals(viewGeneral.getOrigin(), infoTransaction.getOrigin());
-
-        BizEventsViewCart viewCart = listOfCartView.get(0);
-        CartItem cartItem = transactionDetailResponse.getCarts().get(0);
-        assertEquals(viewCart.getSubject(), cartItem.getSubject());
-        assertEquals(ViewGenerator.FORMATTED_AMOUNT, cartItem.getAmount());
-        assertEquals(viewCart.getDebtor().getName(), cartItem.getDebtor().getName());
-        assertEquals(viewCart.getDebtor().getTaxCode(), cartItem.getDebtor().getTaxCode());
-        assertEquals(viewCart.getPayee().getName(), cartItem.getPayee().getName());
-        assertEquals(viewCart.getPayee().getTaxCode(), cartItem.getPayee().getTaxCode());
-        assertEquals(viewCart.getRefNumberType(), cartItem.getRefNumberType());
-        assertEquals(viewCart.getRefNumberValue(), cartItem.getRefNumberValue());
-    }
-    
-    @Test
-    void idAndTaxCodeWithOneEventShouldReturnNDP004OriginType() {
-        List<BizEventsViewGeneral> generalViewList = Collections.singletonList(ViewGenerator.generateBizEventsViewGeneral(false, OriginType.NDP004PROD));
-        when(bizEventsViewGeneralRepository.findByTransactionId(ViewGenerator.TRANSACTION_ID))
-                .thenReturn(generalViewList);
-        List<BizEventsViewCart> listOfCartView = Collections.singletonList(ViewGenerator.generateBizEventsViewCart());
-        when(bizEventsViewCartRepository.getBizEventsViewCartByTransactionId(ViewGenerator.TRANSACTION_ID))
-                .thenReturn(listOfCartView);
-        TransactionDetailResponse transactionDetailResponse =
-                Assertions.assertDoesNotThrow(() ->
-                        transactionService.getTransactionDetails(
-                                ViewGenerator.USER_TAX_CODE_WITH_TX, ViewGenerator.TRANSACTION_ID));
-        assertNotNull(transactionDetailResponse);
-        verify(bizEventsViewGeneralRepository).findByTransactionId(ViewGenerator.TRANSACTION_ID);
-        verify(bizEventsViewCartRepository).getBizEventsViewCartByTransactionId(ViewGenerator.TRANSACTION_ID);
-        verifyNoMoreInteractions(bizEventsViewGeneralRepository);
-        verifyNoMoreInteractions(bizEventsViewCartRepository);
-
-        BizEventsViewGeneral viewGeneral = generalViewList.get(0);
-        assertNotNull(transactionDetailResponse);
-        InfoTransactionView infoTransaction = transactionDetailResponse.getInfoTransaction();
-        assertEquals(viewGeneral.getOrigin(), infoTransaction.getOrigin());
-    }
-
-
-    @Test
-    void idAndTaxCodeWithMultipleCartEventsShouldReturnTransactionDetails() {
-        List<BizEventsViewGeneral> generalViewList = Collections.singletonList(ViewGenerator.generateBizEventsViewGeneral(true));
-        when(bizEventsViewGeneralRepository.findByTransactionId(ViewGenerator.TRANSACTION_ID))
-                .thenReturn(generalViewList);
-        List<BizEventsViewCart> listOfCartView = ViewGenerator.generateListOfFiveViewCart();
-        when(bizEventsViewCartRepository.getBizEventsViewCartByTransactionId(ViewGenerator.TRANSACTION_ID))
-                .thenReturn(listOfCartView);
-        TransactionDetailResponse transactionDetailResponse =
-                Assertions.assertDoesNotThrow(() ->
-                        transactionService.getTransactionDetails(
-                                ViewGenerator.USER_TAX_CODE_WITH_TX, ViewGenerator.TRANSACTION_ID));
-        assertNotNull(transactionDetailResponse);
-        verify(bizEventsViewGeneralRepository).findByTransactionId(ViewGenerator.TRANSACTION_ID);
-        verify(bizEventsViewCartRepository).getBizEventsViewCartByTransactionId(ViewGenerator.TRANSACTION_ID);
-        verifyNoMoreInteractions(bizEventsViewGeneralRepository);
-        verifyNoMoreInteractions(bizEventsViewCartRepository);
-
-        assertEquals(ViewGenerator.FORMATTED_GRAND_TOTAL, transactionDetailResponse.getInfoTransaction().getAmount());
-        for (int i = 0; i < transactionDetailResponse.getCarts().size(); i++) {
-            BizEventsViewCart viewCart = listOfCartView.get(i);
-            CartItem cartItem = transactionDetailResponse.getCarts().get(i);
-            assertEquals(viewCart.getSubject(), cartItem.getSubject());
-            assertEquals(ViewGenerator.FORMATTED_AMOUNT, cartItem.getAmount());
-            assertEquals(viewCart.getDebtor().getName(), cartItem.getDebtor().getName());
-            assertEquals(viewCart.getDebtor().getTaxCode(), cartItem.getDebtor().getTaxCode());
-            assertEquals(viewCart.getPayee().getName(), cartItem.getPayee().getName());
-            assertEquals(viewCart.getPayee().getTaxCode(), cartItem.getPayee().getTaxCode());
-            assertEquals(viewCart.getRefNumberType(), cartItem.getRefNumberType());
-            assertEquals(viewCart.getRefNumberValue(), cartItem.getRefNumberValue());
-        }
-    }
-
-    @Test
     void idAndTaxCodeWithMultipleCartEventsShouldReturnNoticeDetails() {
     	BizEventsViewGeneral viewGeneral = ViewGenerator.generateBizEventsViewGeneral(true);
         when(bizEventsViewGeneralRepository.findByTransactionId(ViewGenerator.TRANSACTION_ID))
@@ -538,42 +439,6 @@ public class TransactionServiceTest {
             it.gov.pagopa.bizeventsservice.model.response.paidnotice.CartItem cartItem = noticeDetailResponse.getCarts().get(i);
             assertCartItems(viewCart, cartItem);
         }
-    }
-
-    @Test
-    void transactionViewGeneralNotFoundThrowError() {
-        List<BizEventsViewGeneral> generalViewList = new ArrayList<>();
-        when(bizEventsViewGeneralRepository.findByTransactionId(ViewGenerator.TRANSACTION_ID))
-                .thenReturn(generalViewList);
-        AppException appException =
-                Assertions.assertThrows(AppException.class, () ->
-                        transactionService.getTransactionDetails(
-                                ViewGenerator.USER_TAX_CODE_WITH_TX, ViewGenerator.TRANSACTION_ID));
-        verify(bizEventsViewGeneralRepository).findByTransactionId(ViewGenerator.TRANSACTION_ID);
-        verifyNoMoreInteractions(bizEventsViewGeneralRepository);
-        verifyNoInteractions(bizEventsViewCartRepository);
-
-        assertEquals(HttpStatus.NOT_FOUND, appException.getHttpStatus());
-    }
-
-    @Test
-    void transactionViewCartNotFoundThrowError() {
-        List<BizEventsViewGeneral> generalViewList = Collections.singletonList(ViewGenerator.generateBizEventsViewGeneral(true));
-        when(bizEventsViewGeneralRepository.findByTransactionId(ViewGenerator.TRANSACTION_ID))
-                .thenReturn(generalViewList);
-        List<BizEventsViewCart> listOfCartView = new ArrayList<>();
-        when(bizEventsViewCartRepository.getBizEventsViewCartByTransactionId(ViewGenerator.TRANSACTION_ID))
-                .thenReturn(listOfCartView);
-        AppException appException =
-                Assertions.assertThrows(AppException.class, () ->
-                        transactionService.getTransactionDetails(
-                                ViewGenerator.USER_TAX_CODE_WITH_TX, ViewGenerator.TRANSACTION_ID));
-        verify(bizEventsViewGeneralRepository).findByTransactionId(ViewGenerator.TRANSACTION_ID);
-        verify(bizEventsViewCartRepository).getBizEventsViewCartByTransactionId(ViewGenerator.TRANSACTION_ID);
-        verifyNoMoreInteractions(bizEventsViewGeneralRepository);
-        verifyNoMoreInteractions(bizEventsViewCartRepository);
-
-        assertEquals(HttpStatus.NOT_FOUND, appException.getHttpStatus());
     }
 
     @Test
@@ -646,31 +511,6 @@ public class TransactionServiceTest {
     }
 
     @Test
-    void transactionViewUserNotFoundThrowError() {
-        when(bizEventsViewUserRepository.getBizEventsViewUserByTaxCodeAndTransactionId(anyString(), anyString()))
-                .thenReturn(null);
-        AppException appException =
-                Assertions.assertThrows(AppException.class, () ->
-                        transactionService.getTransactionDetails(
-                                ViewGenerator.USER_TAX_CODE_WITH_TX, ViewGenerator.TRANSACTION_ID));
-        assertEquals(HttpStatus.NOT_FOUND, appException.getHttpStatus());
-    }
-
-    @Test
-    void getPDFReceiptOK() {
-
-        BizEvent bizEvent = BizEvent.builder().id("event-id").build();
-        when(bizEventsService.getBizEvent(anyString())).thenReturn(bizEvent);
-
-        byte[] res =
-                Assertions.assertDoesNotThrow(() ->
-                        transactionService.getPDFReceipt(
-                                VALID_FISCAL_CODE, "event-id"));
-
-        assertEquals(receipt.length, res.length);
-    }
-
-    @Test
     void getPDFReceiptResponseOK() {
         BizEvent bizEvent = BizEvent.builder().id("event-id").build();
         when(bizEventsService.getBizEventFromLAPId(anyString())).thenReturn(bizEvent);
@@ -679,57 +519,5 @@ public class TransactionServiceTest {
                 transactionService.getPDFReceiptResponse(VALID_FISCAL_CODE, "event-id"));
 
         assertEquals(200, res.getStatusCode().value());
-    }
-
-    @Test
-    void getPDFReceiptForMissingEventIdOK() {
-
-        BizEvent bizEvent = BizEvent.builder().id("missing-id").ts(OffsetDateTime.MIN).build();
-        when(bizEventsService.getBizEvent(anyString())).thenReturn(bizEvent);
-        Attachment attachmentDetail = mock(Attachment.class);
-        AttachmentsDetailsResponse attachments = AttachmentsDetailsResponse.builder().attachments(Arrays.asList(attachmentDetail)).build();
-        when(receiptClient.getAttachments(anyString(), eq("missing-id"))).thenThrow(FeignException.NotFound.class).thenReturn(attachments);
-
-        Assertions.assertThrows(AppException.class, () ->
-                transactionService.getPDFReceipt(
-                        VALID_FISCAL_CODE, "missing-id"));
-
-        verify(transactionService).getPDFReceipt(VALID_FISCAL_CODE, "missing-id");
-        await().atMost(2, TimeUnit.SECONDS).untilAsserted(() -> verify(generateReceiptClient).generateReceipt("missing-id")); // generateReceiptClient.generateReceipt is launched as async invocation: so, wait 2s
-    }
-
-    @Test
-    void getPDFReceiptForMissingPDFFileOK() {
-
-        BizEvent bizEvent = BizEvent.builder().id("missing-pdf-file").build();
-        when(bizEventsService.getBizEvent(anyString())).thenReturn(bizEvent);
-        when(receiptClient.getReceipt(anyString(), eq("missing-pdf-file"), any())).thenThrow(FeignException.NotFound.class).thenReturn(receipt);
-
-        byte[] res =
-                Assertions.assertDoesNotThrow(() ->
-                        transactionService.getPDFReceipt(
-                                VALID_FISCAL_CODE, "missing-pdf-file"));
-
-        verify(transactionService).getPDFReceipt(VALID_FISCAL_CODE, "missing-pdf-file");
-        verify(receiptClient).getAttachments(VALID_FISCAL_CODE, "missing-pdf-file");
-        verify(generateReceiptClient).generateReceipt("missing-pdf-file");
-        verify(receiptClient, times(2)).getReceipt(eq(VALID_FISCAL_CODE), eq("missing-pdf-file"), any());
-        assertEquals(receipt.length, res.length);
-    }
-
-    @Test
-    void getPDFReceiptForUnhandledExceptionKO() {
-
-        BizEvent bizEvent = BizEvent.builder().id("event-id").build();
-        when(bizEventsService.getBizEvent(anyString())).thenReturn(bizEvent);
-        // Override @BeforeEach condition
-        when(receiptClient.getAttachments(anyString(), eq("event-id"))).thenThrow(FeignException.BadRequest.class);
-
-
-        Assertions.assertThrows(FeignException.BadRequest.class, () ->
-                transactionService.getPDFReceipt(
-                        INVALID_FISCAL_CODE, "event-id"));
-
-        verify(receiptClient).getAttachments(INVALID_FISCAL_CODE, "event-id");
     }
 }
